--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -14,5 +14,5 @@ _main:
     resource: routing.yml
 
 # AcmeDemoBundle routes (to be removed)
-_acme_demo:
-    resource: "@AcmeDemoBundle/Resources/config/routing.yml"
+_bbc:
+    resource: "@BBCBundle/Resources/config/routing.yml"
