--- a/src/BBC/BBCBundle/Resources/config/routing.yml
+++ b/src/BBC/BBCBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 _welcome:
     pattern:  /
-    defaults: { _controller: BBCBundle:Welcome:index }
+    defaults: { _controller: BBCBundle:Demo:index }
